# soft-renderer

./: CMakeLists.txt  README.md  imgui.ini  log.txt
.github/workflows/: cmake-multi-platform.yml
scripts/: build.sh  release-build.sh
source/include/: Buffer.hpp  Hittable.hpp  Random.hpp  Renderer.hpp  Vector.hpp
source/src/: Renderer.cpp
tests/: CMakeLists.txt
tests/InOneWeek/: main.cpp
tests/imgui_viewer/: main.cpp
